@@ -4,9 +4,11 @@ import com.tuxlogic.shiftiq.platform.iot.domain.model.commands.IngestTelemetryBa
 import com.tuxlogic.shiftiq.platform.iot.domain.model.valueobjects.Obd2DeviceId;
 import com.tuxlogic.shiftiq.platform.iot.interfaces.rest.resources.IngestTelemetryBatchResource;
 
-import java.util.stream.Collectors;
+import java.util.Collections;
 
 public class TelemetryCommandFromResourceAssembler {
+
+    private TelemetryCommandFromResourceAssembler() {}
 
     public static IngestTelemetryBatchCommand toCommandFromResource(IngestTelemetryBatchResource resource) {
         if (resource == null) {
@@ -20,9 +22,18 @@ public class TelemetryCommandFromResourceAssembler {
                         data.speedKmh(),
                         data.odometerKm(),
                         data.fuelLevelPercent(),
-                        data.createdAt()
+                        data.createdAt(),
+                        data.dtcCodes() == null
+                                ? Collections.emptyList()
+                                : data.dtcCodes().stream()
+                                .map(dtc -> new IngestTelemetryBatchCommand.DtcCodeData(
+                                        dtc.dtcCode(),
+                                        dtc.description(),
+                                        dtc.severity()
+                                ))
+                                .toList()
                 ))
-                .collect(Collectors.toList());
+                .toList();
 
         return new IngestTelemetryBatchCommand(
                 new Obd2DeviceId(resource.obd2DeviceId()),
